Homework OOP Sem4 Edit1